upload button loads JSON file (no checks or reaction yet)

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </div>
                     <div class="startButtonContainer">
                         <img src="./media/download_doc.png" class="downloadImg" title="export current settings" onclick="exportSettings()">
-                        <img src="./media/upload_doc.png" class="downloadImg" title="import settings">                        
+                        <img src="./media/upload_doc.png" class="downloadImg" title="import settings" onclick="importSettings()">                        
                         <button class="startButton" onclick="loadExperiment()">Start Experiment</button>
                     </div>
                 </section>
