modularised index and settings js

--- a/experiment.html
+++ b/experiment.html
@@ -7,7 +7,7 @@
         <script type="module" src="./js/experiment.js"></script>
         <script type="module" src="./js/video.js"></script>
         <script type="module" src="./js/rating.js"></script>
-        <script src="./js/settings.js"></script>
+        <script src="./js/headerFunctions.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
@@ -16,7 +16,7 @@
     
     <body>
         <header class = "header">
-            <a class="iconWrapper" id="homeButton" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
+            <a id="homeButton" class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
             <h1>Viinvara</h1>
             <!--<a class="iconWrapper" onclick=""><img class="help icon" src="./media/help_icon.png" alt="Help Icon"></a>-->        
         </header>
