split js into folders for easier overview

--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
         <title>Welcome</title>
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/index.css" type="text/css" rel="stylesheet">
-        <script type="module" src="./js/settings.js"></script>
-        <script type="module" src="./js/scaleSettings.js"></script>
-        <script type="module" src="./js/experimentSettings.js"></script>
-        <script type="module" src="./js/experimentDataSettings.js"></script>
-        <script type="module" src="./js/settingsImportExport.js"></script>
+        <script type="module" src="./js/index/indexEventListeners.js"></script>
+        <script src="./js/index/index.js"></script>
         <script src="./js/headerFunctions.js"></script>
-        <script src="./js/index.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
