--- a/loadExperiment.html
+++ b/loadExperiment.html
@@ -4,14 +4,13 @@
         <title>Results</title>
         <link href="./css/results.css" type="text/css" rel="stylesheet">
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
-        <script type="module" src="./js/settings.js"></script>
-        <script type="module" src="./js/settingsImportExport.js"></script>
+        <script type="module" src="./js/settings/settingsImportExport.js"></script>
         <script src="./js/headerFunctions.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
-    <body onload="setUp()" onresize="refresh()">
+    <body>
         <header class = "header">
             <a id="homeButton" class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
             <h1>Viinvara</h1>
@@ -19,10 +18,14 @@
         </header>
         <main class="mainBody">
             <div class="pageContent">
-                <div class="textPanel">
-                    <span id="instruction">Rate your Video</span>
-                    <button id="exitButton">continue <img class="exitIcon" src="./media/exit_icon.png"></button>
+                <div class="">
+                    <label for="nameField">Please enter your participant name or ID: </label>
+                    <input type="text" class = "textInput" id="nameField" autofocus>
                 </div>
+                <div class="infoField">
+                    <span id="instruction">Please provide an experiment setting file with type ".js".</span>
+                    <button id="settingsImportButton" class="downloadImg" title="click to select file" onclick="importSettings()">select file</button>
+                </div> 
             </div>
         </main>
         <footer class = "footer">
