--- a/results.html
+++ b/results.html
@@ -6,7 +6,7 @@
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.9/dist/chart.umd.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.1.0/dist/chartjs-plugin-annotation.min.js"></script>        
-        <script src="./js/results.js"></script>
+        <script src="./js/results/results.js"></script>
         <script src="./js/headerFunctions.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
