--- a/loadExperiment.html
+++ b/loadExperiment.html
@@ -4,13 +4,13 @@
         <title>Results</title>
         <link href="./css/loadExperiment.css" type="text/css" rel="stylesheet">
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
-        <script src="./js/remoteExperiment/loadExperiment.js"></script>
-        <script src="./js/headerFunctions.js"></script>
+        <script type="module" src="./js/remoteExperiment/loadExperiment.js"></script>
+        <script type="module" src="./js/headerFunctions.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
-    <body onload="loadTheme()"> 
+    <body> 
         <header class = "header">
             <a id="homeButton" class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
             <h1>Viinvara</h1>
@@ -32,7 +32,7 @@
                         <input type="text" class = "textInput" id="nameField" autofocus>
                     </div>
                     <div class="infoField" id="infoField">
-                        <button id="settingsImportButton" class="downloadImg" title="click to select file" onclick="importSettings()">upload settings file</button>
+                        <button id="settingsImportButton" class="downloadImg" title="click to select file">upload settings file</button>
                     </div> 
                 </div>   
             </div>
