--- a/experiment.html
+++ b/experiment.html
@@ -5,7 +5,7 @@
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/experiment.css" type="text/css" rel="stylesheet">
         <script type="module" src="./js/experiment/experimentEventListeners.js"></script>
-        <script src="./js/headerFunctions.js"></script>
+        <script type="module" src="./js/headerFunctions.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
