split import and export in more meaningful files

--- a/loadExperiment.html
+++ b/loadExperiment.html
@@ -4,7 +4,7 @@
         <title>Results</title>
         <link href="./css/loadExperiment.css" type="text/css" rel="stylesheet">
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
-        <script type="module" src="./js/remoteExperiment/loadExperiment.js"></script>
+        <script type="module" src="./js/remoteExperiment/loadExperimentEventListeners.js"></script>
         <script type="module" src="./js/headerFunctions.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
@@ -32,7 +32,7 @@
                         <input type="text" class = "textInput" id="nameField" autofocus>
                     </div>
                     <div class="infoField" id="infoField">
-                        <button id="settingsImportButton" class="downloadImg" title="click to select file">upload settings file</button>
+                        <button id="remoteSettingsImportButton" class="downloadImg" title="click to select file">upload settings file</button>
                     </div> 
                 </div>   
             </div>
